--- a/.github/workflows/helm-charts-test.yaml
+++ b/.github/workflows/helm-charts-test.yaml
@@ -80,13 +80,12 @@ jobs:
           echo -e "  PIHOLE_HOSTNAME: \"${{ steps.pihole.outputs.hostname }}\"\r\n" >> charts/pi-hole-exporter/library-ci/secret.yaml
           cp charts/commons/library-ci/*.yaml charts/commons/templates/
           cp charts/cron-jobs/library-ci/*.yaml charts/cron-jobs/templates/
-          cp charts/horizontal-pod-autoscalers/library-ci/*.yaml charts/horizontal-pod-autoscalers/templates/
           cp charts/pi-hole-exporter/library-ci/*.yaml charts/pi-hole-exporter/templates/
           sed -i 's/library/application/g' charts/commons/Chart.yaml
           sed -i 's/library/application/g' charts/cron-jobs/Chart.yaml
-          sed -i 's/library/application/g' charts/horizontal-pod-autoscalers/Chart.yaml
           rm -Rf charts/commento
           rm -Rf charts/commentoplusplus
+          rm -Rf charts/horizontal-pod-autoscalers
       - run: kubectl get pods -A
       - run: kubectl get svc -A
       - name: Test Changed Charts
