--- a/charts/docker-hub-exporter/Chart.yaml
+++ b/charts/docker-hub-exporter/Chart.yaml
@@ -9,6 +9,7 @@ appVersion: d05df48
 maintainers:
   - name: WyriHaximus
     email: helm@wyrihaximus.net
+    url: https://wyrihaximus.net
 dependencies:
   - name: commons
     version: ^0.1
