Use sticky comments for README Diff
After filing https://github.com/LouisBrunner/diff-action/pull/21 this was addressed in https://github.com/LouisBrunner/diff-action/pull/22 and released in https://github.com/LouisBrunner/diff-action/releases/tag/v2.1.0

--- a/.github/workflows/helm-charts-test.yaml
+++ b/.github/workflows/helm-charts-test.yaml
@@ -54,7 +54,7 @@ jobs:
         run: |
           make generate
       - name: Check that the files are the exact same
-        uses: LouisBrunner/diff-action@v2.0.0
+        uses: LouisBrunner/diff-action@v2.1.0
         with:
           old: charts/${{ matrix.chart }}/README.current.md
           new: charts/${{ matrix.chart }}/README.md
@@ -63,6 +63,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           notify_check: true
           notify_issue: true
+          sticky_comment: true
+          title: ${{ matrix.chart }}
   validate-values-schema:
     runs-on: ubuntu-latest
     name: Validate values schema json
